Apartados y navegacion hechos

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
         color: #eee;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 0px;
+          scroll-behavior: smooth;
     }
 
     * {
